
Version 0.42.0  (In Progress)

  * add input file option to provide system-specific configuration
    option (config_dir); the global value can also be customized on a
    per-host basis using regular expressions
  * add auto-configuration of Custom package removal when upgrading a multi-install package
  * changed order of operations for update utility - all packages
    (OS and Custom) flagged for removal are now uninstalled prior to any new updates

Version 0.41.0  (19 March 2013)

  * added silent mode option for update which shows single line summary if host is up to date
  * added option to use alternate config file location (set via LOSF_CONFIG_DIR variable)
  * added local log file (/tmp/losf/last_update) to track last local update
  * performance optimization - locally installed RPMS queried once and cached
  * OS and custom package config file format update: "losf config-upgrade" can be used
    to migrate old format to latest version

Version 0.40.0  (15 February 2013)

  * addition of new options to losf command-line utility (see "losf --help" for more info)
  * re-factorization of OS packages, use "losf addpkg" to register OS distro packages
  * re-factorization of custom packages, use "losf addrpm" to add custom RPMs
  * added support for customization of relocatable rpms
  * added top-level update alias, can extend normal functionality with the presence 
    of an update.<Cluster> shell script for local site customization
  * added support for custom rpm aliases which can be reused across various node types
  * added capability to define local rpm source repositories on a per-appliance basis
  * bug fix for chassis-only koomie_cf command launching
  * new "-f" option to koomie_cf to read desired launch hosts from file

Version 0.32.0  (07 August 2011)

  * added capability to have override global rpm repository defined when running update
  * added mechanism to control chkconfig services on per-appliance basis